--- a/env/default/csharp.properties
+++ b/env/default/csharp.properties
@@ -1,5 +1,5 @@
 # Holds the location of the created Gauge project
-GAUGE_CSHARP_PROJECT_FILE = C:/Temp/gauge/gauge.csproj
+#GAUGE_CSHARP_PROJECT_FILE = C:/Temp/gauge/gauge.csproj
 
 # The build configuration when running tests for the Gauge project
 GAUGE_CSHARP_PROJECT_CONFIG = Debug
