--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+.gauge
+gauge_bin
+reports
+
 # User-specific files
 *.suo
 *.user
