--- a/env/default/dotnet.properties
+++ b/env/default/dotnet.properties
@@ -1,5 +1,5 @@
 # Holds the location of the created Gauge project
-#GAUGE_CSHARP_PROJECT_FILE = netcore-template.csproj
+GAUGE_CSHARP_PROJECT_FILE = Example.Gauge.csproj
 
 # Default build configration
 GAUGE_CSHARP_PROJECT_CONFIG=release
