--- a/env/default/default.properties
+++ b/env/default/default.properties
@@ -1,8 +1,8 @@
 # default.properties
 # properties set here will be available to the test execution as environment variables
-rp_uri = https://rp.epam.com/api/v1
-rp_project = default_project
-rp_uuid = 7853c7a9-7f27-43ea-835a-cab01355fd17
+rp_uri = https://web.demo.reportportal.io/api/v1
+rp_project = default_personal
+rp_uuid = 73258623-7e6d-47c4-b6af-6adddfd35cde
 # sample_key = sample_value
 
 # The path to the gauge reports directory. Should be either relative to the project directory or an absolute path
